--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ body {
   
   Su historia es poco conocida y confusa, pero se cree que estos animales ya existían en el siglo XIII en China, y que eran empleados como perros ratoneros en barcos mercantes. </p>
 <h3 id="perro2">Perro Peruano sin Pelo </h3>
-<img src="../imagenes/Perro-sin-pelo-del-peru.JPG" alt="" width="276" height="183" id="perrococo"/>
+<img src="imagenes/Perro-sin-pelo-del-peru.JPG" alt="" width="276" height="183" id="perrococo"/>
 <p style="text-align: justify"> La historia cuenta que los exploradores españoles descubrieron esta raza en las casas de la nobleza Inca cuando entraron por primera vez en este Imperio a principios del siglo XVI. Estos perros, fueron adorados por esta civilización y desempeñaron un papel importante, ya que participaban en actos ceremoniales. Han sido, además, reconocidos oficialmente como patrimonio nacional de Perú. 
   
   Viringo o perro calato, esta raza delgada y elegante con una ausencia total de pelo, al igual que sucedía con el Catalburun, se debe a una accidente genético. Estos perros son más propensos a las enfermedades que cualquier otro. </p>
 
 <h3 id="perro3">Terrier Bedligton</h3>
-<img src="../imagenes/perrobridgerton.jpg" alt="" width="288" height="273" id="perrobridgerton"/>
+<img src="imagenes/perrobridgerton.jpg" alt="" width="288" height="273" id="perrobridgerton"/>
 <p style="text-align: justify"> El pelaje de los perros de raza bedlington terrier hace que se asemejen a ovejas. Además, son muy esbeltos y generalmente altos, probablemente porque son una raza producto de la mezcla de los whippets y los caniches. Aún así, son indudablemente bonitos. Imitando a una oveja por la forma de su cráneo, tiene una gran acumulación de pelo en las patas, en la punta de las orejas y en la cabeza. Criada en el siglo XIX en Bedlington, Inglaterra, como resultado de cruces entre Caniche, el Dandie Dinmont Terrier y el Whippet.<br>Esta raza era usada por los mineros del norte del país como cazadores de ratas en las galerías.  </p> 
 <h3 id="perro4">Puli</h3>
 <img src="../imagenes/how-a-puli-puppys-corded-coat-develops-and-grows-5c472a3d10cd0.jpeg" alt="" width="317" height="208" id="perropalopiso"/>
@@ -41,13 +41,13 @@ body {
   Se cree que sus antepasados llegaron al país húngaro en el siglo IX cuando las tribus magiares del príncipe Arpad se instalaron en la puszta (estepa húngara). Aunque otra teoría afirma que fueron llevados por los mongoles. Durante el siglo XIX, el Puli se empleó como perro de guarda.</p>
 
 <h3 id="perro5">Dogo del Tibet</h3>
-<img src="../imagenes/Mastino-Tibetano-1.jpg" alt="" width="337" height="221" id="perrotibetano"/>
+<img src="imagenes/Mastino-Tibetano-1.jpg" alt="" width="337" height="221" id="perrotibetano"/>
 <p style="text-align: justify"> Está consolidado como un símbolo de estatus por su imponente presencia, muy similar a los leones. El Dogo del Tíbet, como también se le conoce, es el perro más caro del mundo. En marzo de 2016 se llegó a pagar hasta dos millones de euros por un ejemplar de esta raza. 
   
   Excelentes perros para tirar de trineos y carruajes, era la antigua raza de trabajo que utilizaban los pastores nómadas del Himalaya y guardián tradicional de los monasterios tibetanos. Se trata de un perro que, debido a la densidad y volumen de su pelaje, se asemeja a un león. De hecho, al igual que sucede con estos felinos, los machos de raza mastín tibetano tienen más pelo que las hembras. No obstante, en esta raza, se valora mucho más la calidad del pelo que la cantidad.</p>
 
 <h3 id="perro6"> Mastín Napolitano </h3>
-<img src="../imagenes/neapolitan_mastiff.jpg" alt="" width="235" height="222" id="perrofangs"/>
+<img src="imagenes/neapolitan_mastiff.jpg" alt="" width="235" height="222" id="perrofangs"/>
 <p>Se trata de un perro de gran tamaño pero cariñoso. Adora a su familia y desconfía de los extraños. Esto les convierte en grandes perros guardianes, ya que son muy protectores y no dudarán en alejar a cualquier visitante no deseado. Estos perros no requieren mucho mantenimiento.
   
   Su origen se remonta al 700 a.C. Alejandro Magno cruzó sus perros de guerra gigantes con perros indios de pelo corto, creando la raza del Mosolo, que posteriormente siguió cruzándose con razas grandes para dar origen al mastín. </p>
