--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 <h2>Las 6 de las razas de perro más extrañas</h2>
 <p style="color: #171726">Es indudable que el mundo animal es capaz de sorprendernos cada día. En esta ocasión vamos a hacer una parada en algo de lo más peculiar y llamativo: los perros más raros (o feos) del mundo. Aunque muchas de las razas de perro que te mostraremos a continuación son indudablemente bonitas, es innegable que también son, cuanto menos, extrañas. </p>
 <h3 id="perro1">Crestado Chino</h3>
-<img src="../imagenes/crestado-chino-precioso-1200x900.jpg" alt="" width="252" height="188" id="perrofeo"/>
+<img src="imagenes/crestado-chino-precioso-1200x900.jpg" alt="" width="252" height="188" id="perrofeo"/>
 <p style="text-align: justify"> Elegido como el perro más feo del mundo en los últimos concursos de este tipo, podemos encontrar dos variedades: una con pelo llamada poder puff, y otra sin pelo. ¿Qué les caracteriza? Tienen dos grandes orejas y una cresta de pelo sedoso sobre la cabeza. Además, un ligero manto de pelo sobre los pies y en el extremo de la cola. Podemos ver un ejemplar en la película "101 Dálmatas", ya que la villana Cruella de Vil tiene uno. 
   
   Su historia es poco conocida y confusa, pero se cree que estos animales ya existían en el siglo XIII en China, y que eran empleados como perros ratoneros en barcos mercantes. </p>
