--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
 <img src="imagenes/perrobridgerton.jpg" alt="" width="288" height="273" id="perrobridgerton"/>
 <p style="text-align: justify"> El pelaje de los perros de raza bedlington terrier hace que se asemejen a ovejas. Además, son muy esbeltos y generalmente altos, probablemente porque son una raza producto de la mezcla de los whippets y los caniches. Aún así, son indudablemente bonitos. Imitando a una oveja por la forma de su cráneo, tiene una gran acumulación de pelo en las patas, en la punta de las orejas y en la cabeza. Criada en el siglo XIX en Bedlington, Inglaterra, como resultado de cruces entre Caniche, el Dandie Dinmont Terrier y el Whippet.<br>Esta raza era usada por los mineros del norte del país como cazadores de ratas en las galerías.  </p> 
 <h3 id="perro4">Puli</h3>
-<img src="../imagenes/how-a-puli-puppys-corded-coat-develops-and-grows-5c472a3d10cd0.jpeg" alt="" width="317" height="208" id="perropalopiso"/>
+<img src="imagenes/how-a-puli-puppys-corded-coat-develops-and-grows-5c472a3d10cd0.jpeg" alt="" width="317" height="208" id="perropalopiso"/>
 <p style="text-align: justify"> Si tienes el privilegio de encontrarte con uno, solo distinguirás una masa de pelo redonda con la lengua colgando. Ya que no verás ni los ojos ni las orejas. Si hasta parece que no tiene cuello ni cola. 
   
   Es el perro nacional de Hungría, y tiene unos rizos tan perfectos y originales que parece que está cubierto de rastas. Esto se debe a que el pelo crece hasta el suelo, para después convertirse en esto. 
